fix: fix hanlder for swager
